test/vlt/01-syntax/formatting/formatting.ERROR.expected
let () = Vlt.Logger.prepare "Formatting"
let () =
  if Vlt.Logger.check_level "Formatting" Vlt.Level.FATAL
  then
    Vlt.Logger.logf "Formatting" Vlt.Level.FATAL ~file:"formatting.ml"
      ~line:4 ~column:2 ~properties:[] ~error:None "no parameter"
  else ();
  ();
  if Vlt.Logger.check_level "Formatting" Vlt.Level.ERROR
  then
    Vlt.Logger.logf "Formatting" Vlt.Level.ERROR ~file:"formatting.ml"
      ~line:6 ~column:2 ~properties:[] ~error:None "two parameters: %d %s" 1
      "abc"
  else ();
  ();
  ();
  ();
  ()
let id x = x
let () =
  if Vlt.Logger.check_level "Formatting" Vlt.Level.FATAL
  then
    Vlt.Logger.logf "Formatting" Vlt.Level.FATAL ~file:"formatting.ml"
      ~line:15 ~column:2 ~properties:[] ~error:None "no parameter"
  else ();
  ();
  if Vlt.Logger.check_level "Formatting" Vlt.Level.ERROR
  then
    Vlt.Logger.logf "Formatting" Vlt.Level.ERROR ~file:"formatting.ml"
      ~line:17 ~column:2 ~properties:[] ~error:None "two parameters: %d %s" 1
      (id "abc")
  else ();
  ();
  ();
  ();
  ()
